[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simRT"
dynamic = ["version"]
description = "Simulate the scheduling process of real-time scheduling algorithm on heterogeneous multi-core processor platform"
readme = "README.md"
dependencies = [
    "simpy",
    "scipy",
    "numpy",
    "tqdm",
    "psutil"
]
requires-python = ">=3.10"