[tool.poetry]
name = "simrt"
version = "0.1.1"
description = "SimRT is a Python library designed to simulate the scheduling processes of real-time scheduling algorithms."
authors = ["unccx <2336429253@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
simpy = "^4.1.1"
tqdm = "^4.66.5"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"